# pomodoro

./: .editorconfig  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .stylelintignore  .stylelintrc  .travis.yml  biome.json  bower.json  circleProgress.js  config.json  index.css  index.html  index.js  license  main.js  package-config.json  package-lock.json  package.json  params.json  readme.md  rust-toolchain.toml  settings.html  test.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/actions/setup-env/: action.yaml
.github/workflows/: automerge.yaml  build.yaml  main.yml  release.yaml  validate.yaml
src/: index.html  main.ts  settings.html  settings.ts  style.less
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5  tauri.windows.conf.json5
src-tauri/bindings/: GetSettingsResponse.ts  SetSettingsPayload.ts  SettingsPayload.ts  TimerEndPayload.ts  TimerMode.ts  TimerStatePayload.ts
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  helpers.rs  main.rs  services.rs  state.rs
src-tauri/src/commands/: settings.rs  timer.rs
src-tauri/src/helpers/: fs.rs  shortcuts.rs  sound.rs  timer.rs  updater.rs
src-tauri/src/services/: fs.rs
src-tauri/src/ui/: tray.rs  window.rs
src-tauri/src/utils/: timer.rs
src-ui/: .eslintrc  .stylelintrc  eslint.config.mjs  index.html  index.less  index.ts  jest.config.ts  timer.service.spec.ts  timer.service.ts  timer.view.ts  vite.config.ts
src-ui/pages/about/: about.html  about.less  about.ts
src-ui/pages/main/: main.html  main.less  main.ts  timer.service.spec.ts  timer.service.ts  timer.view.ts
src-ui/pages/settings/: settings.html  settings.less  settings.service.spec.ts  settings.service.ts  settings.ts  settings.view.ts
src-ui/settings/: settings.html  settings.less  settings.service.spec.ts  settings.service.ts  settings.ts  settings.view.ts
src-ui/styles/: common.less  theme.less
src-ui/utils/: dom.ts  duration.spec.ts  duration.ts  logging.ts  shortcut-builder.spec.ts  shortcut-builder.ts  tauri-events.ts  test-ipc.ts  theme.ts  time.spec.ts  time.ts  type.ts
src-ui/views/: timer.ts
src/js/: .eslintrc  circle-progress-override.js  circleCtrl.js  circleProgress.js  main.js  settings.js
src/styles/: common.css  common.less  index.css  main.less  settings.css  settings.less  theme.less
src/utils/: env.ts  tauri-events.ts  time.spec.ts  time.ts
src/views/: settings.ts  timer.ts
templates/: dummy.html
