[package]
name = "app"
version = "3.2.3"
description = "Pomodoro timer app"
authors = ["G07cha"]
license = "MIT"
default-run = "app"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = ["config-json5"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1", features = [ "shell-open", "test", "global-shortcut", "config-json5", "dialog-message", "macos-private-api", "system-tray", "updater", "window-close"] }
window-vibrancy = "0.3.2"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
ts-rs = "6.2.1"
ticking-timer = { git = "https://github.com/G07cha/ticking-timer", version = "0.1.1" }
anyhow = "1.0.71"

[dev-dependencies]
cargo-bump = "1.1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
